# note

./: Cargo.toml  readme.md
src/: add.rs  delete.rs  get.rs  list.rs  main.rs  open.rs
