[package]
name = "note"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
lto = "thin"
strip = "symbols"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"

